bah videos, fixed overflow

--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -32,6 +32,7 @@ h1, h2, h3, h4, h5 {
     left: 0;
     right: 0;
 
+    overflow: hidden;
     > * { margin: 1.5em 0; }
 
 }
